<resources>
    <string name="app_name">leo_kotlin_mvp_demo</string>

    <!--    首页-->
    <string name="title_home">首页</string>
    <string name="title_project">项目</string>
    <string name="title_square">广场</string>
    <string name="title_we_chat">公众号</string>
    <string name="title_user">我的</string>


    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_nav">TestNavActivity</string>
</resources>