<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="leo.study.kotlin_mvp_demo.ui.mvp.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_project"
        android:name="leo.study.kotlin_mvp_demo.ui.mvp.fragment.project.ProjectFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_square"
        android:name="leo.study.kotlin_mvp_demo.ui.mvp.fragment.more_square.SquareFragment"
        android:label="@string/title_square"
        tools:layout="@layout/fragment_square" />

    <fragment
        android:id="@+id/navigation_we_chat"
        android:name="leo.study.kotlin_mvp_demo.ui.mvp.fragment.wechat.WeChatFragment"
        android:label="@string/title_we_chat"
        tools:layout="@layout/fragment_we_chat" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="leo.study.kotlin_mvp_demo.ui.mvp.fragment.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>